[package]
name = "ssr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
clap = { version = "4.5.46", features = ["derive"] }
clipboard = "0.5.0"
colored = "3.0.0"
cron = "0.15.0"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0.143", features = ["preserve_order"] }
serde_json_path = "0.7.2"
syntect = "5.2.0"
