[package]
name = "ssr"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
clap = { version = "4.5.46", features = ["derive"] }
clipboard = "0.5.0"
colored = "3.0.0"
cron = "0.15.0"
crossterm = "0.29.0"
lazy_static = "1.5.0"
mlua = { version = "0.11.3", features = ["anyhow", "lua54", "serde", "vendored"] }
openai = "1.1.1"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "json", "gzip", "deflate"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0.143", features = ["preserve_order"] }
serde_json_path = "0.7.2"
syntect = "5.2.0"
tokio = { version = "1.47.1", features = ["full"] }
